# auth-middleware

./: .coveragerc  .flake8  .gitignore  CHANGELOG.txt  README.development.md  README.md  alembic.ini  makefile  pyproject.toml  sonar-project.properties
.devcontainer/: .bashrc  Dockerfile  QUICKSTART.md  README.md  devcontainer.json  start.sh  uv.toml  verify-setup.sh
.github/workflows/: main.yml  release.yml
.sonar/: report-task.txt
.sonarlint/: connectedMode.json
alembic/: env.py
alembic/versions/: de961fac6f27_initial_migration.py
docs/: .buildinfo  .buildinfo.bak  api.html  auth-authn.html  cognito_provider.html  entra_id_provider.html  exceptions.html  extending-authz-providers.html  functions.html  genindex.html  groups-provider.html  index.html  infrastructure.html  installation.html  jwks-cache.html  jwt_auth_middleware.html  jwt_auth_provider.html  jwt_bearer_manager.html  middleware-configuration.html  objects.inv  permissions-provider.html  py-modindex.html  search.html  searchindex.js  services.html  types.html  user-guide.html  user-property.html
docs/.doctrees/: api.doctree  auth-authn.doctree  cognito_provider.doctree  entra_id_provider.doctree  environment.pickle  exceptions.doctree  extending-authz-providers.doctree  functions.doctree  groups-provider.doctree  index.doctree  infrastructure.doctree  installation.doctree  jwks-cache.doctree  jwt_auth_middleware.doctree  jwt_auth_provider.doctree  jwt_bearer_manager.doctree  middleware-configuration.doctree  permissions-provider.doctree  services.doctree  types.doctree  user-guide.doctree  user-property.doctree
docs/.doctrees/__intersphinx_cache__/: fastapi_objects.inv
docs/.doctrees/infrastructure/: cognito-setup.doctree  entra-id-setup.doctree  google-setup.doctree
docs/_modules/: index.html
docs/_modules/auth_middleware/: functions.html  jwt_auth_middleware.html  jwt_bearer_manager.html
docs/_sources/: api.rst.txt  auth-authn.rst.txt  cognito_provider.rst.txt  entra_id_provider.rst.txt  exceptions.rst.txt  extending-authz-providers.rst.txt  functions.rst.txt  groups-provider.rst.txt  index.rst.txt  jwt_auth_provider.rst.txt  jwt_bearer_manager.rst.txt  middleware-configuration.rst.txt  permissions-provider.rst.txt  services.rst.txt  types.rst.txt  user-guide.rst.txt  user-property.rst.txt
docs/_sources/infrastructure/: cognito-setup.rst.txt  entra-id-setup.rst.txt
docs/_static/: documentation_options.js
docs/infrastructure/: cognito-setup.html  entra-id-setup.html  google-setup.html
docs_source/: cognito_provider.rst  conf.py  entra_id_provider.rst  extending-authz-providers.rst  functions.rst  groups-provider.rst  index.rst  infrastructure.rst  installation.rst  jwks-cache.rst  jwt_auth_middleware.rst  middleware-configuration.rst  permissions-provider.rst  user-guide.rst
docs_source/infrastructure/: cognito-setup.rst  google-setup.rst
examples/: audit_example.py  auth_examples.py  docker-compose-db.yaml  jwks_cache_example.py  m2m_detection_example.py  metrics_example.py  rate_limiting_example.py
examples/fastapi_basic_auth/: .env.template  README.md  pyproject.toml
examples/fastapi_basic_auth/credentials/: test_credentials.json
examples/fastapi_cognito/: .env.template  README.md  auth-middleware.postman_collection.json  pyproject.toml
examples/fastapi_cognito/templates/: index.html
examples/fastapi_cognito/terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
examples/fastapi_entra_id/: .env.template  README.md  pyproject.toml
examples/fastapi_entra_id/templates/: index.html
scripts/: README.md  update_version.py
src/auth_middleware/: __init__.py  auth_provider.py  basic_auth_middleware.py  cli.py  constants.py  exceptions.py  functions.py  group_checker.py  jwt_auth_middleware.py  jwt_auth_provider.py  jwt_bearer_manager.py  logging.py  permissions_checker.py  role_checker.py  settings.py  types.py  user_credentials.py
src/auth_middleware/contracts/: __init__.py  credentials_repository.py  groups_provider.py  jwt_provider.py  permissions_provider.py  profile_provider.py  roles_provider.py
src/auth_middleware/exceptions/: __init__.py  authentication_error.py  cognito_exceptions.py  invalid_authorization_exception.py  invalid_credentials_exception.py  invalid_token_exception.py  password_policy_error.py  user_not_found_error.py
src/auth_middleware/guards/: __init__.py  functions.py
src/auth_middleware/repository/: __init__.py  credentials_repository.py  settings.py  (+1 more)
tests/: conftest.py  test_abstract_stubs.py  test_async_database.py  test_auth_provider.py  test_aws_credentials.py  test_basic_auth_middleware.py  test_basic_auth_middleware_clean.py  test_cli.py  test_cognito_auth_service.py  test_cognito_groups_as_roles_provider.py  test_cognito_profile_provider.py  test_cognito_provider.py  test_cognito_provider_clean.py  test_cognito_settings.py  test_cognito_utils.py  test_dummy.py  test_entra_id_init.py  test_entra_id_provider.py  test_entra_id_settings.py  test_entra_id_utils.py  test_exceptions.py  test_functions.py  test_group_checker.py  test_groups_provider.py  test_identity_pool_client.py  test_identity_pool_provider.py  test_identity_pool_settings.py  test_json_credentials_repository.py  test_jwks_cache_improvements.py  test_jwt_auth_middleware.py  test_jwt_bearer_manager.py  test_jwt_provider.py  test_jwt_provider_settings.py  test_jwt_types.py  test_logging.py  test_m2m_detector.py  test_metrics.py  test_permissions_checker.py  test_permissions_provider.py  test_rate_limiter.py  (+6 more)
tests/0.APITesting/: bruno.json
tests/commands/: test_cli.py
tests/contracts/: test_abstract_stubs.py  test_auth_provider.py  test_groups_provider.py  test_jwt_provider.py  test_jwt_provider_settings.py  test_permissions_provider.py
tests/guards/: test_functions.py  test_group_checker.py  test_permissions_checker.py  test_role_checker.py
tests/repository/: test_json_credentials_repository.py
tests/services/: test_audit.py  test_rate_limiter.py
tests/types/: test_jwt_types.py  test_user_m2m.py
todo_tests/: test_jwt_auth_middleware.py
(+131 files in other folders)
