[project]
name = "auth-middleware"
version = "0.4.3"
description = "Async Auth Middleware for FastAPI/Starlette"
authors = [
    {name = "impalah", email = "impalah@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["auth", "middleware", "fastapi", "starlette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "svix-ksuid>=0.6.2",
    "httpx>=0.28.1",
    "click>=8.3.1",
    "loguru>=0.7.3",
    "joserfc>=1.6.3",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "aiomysql>=0.3.2",
]

[project.urls]
Homepage = "https://impalah.github.io/auth-middleware/"
Documentation = "https://impalah.github.io/auth-middleware/"
Repository = "https://github.com/impalah/auth-middleware"
Source = "https://github.com/impalah/auth-middleware"

[project.scripts]
authcli = "auth_middleware.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "debugpy>=1.8.19",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "mock>=5.2.0",
    "pytest-env>=1.2.0",
    "alembic>=1.18.2",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.40.0",
    "pysonar>=1.4.0.4676",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-autodoc-typehints>=3.6.2",
    "myst-parser>=5.0.0",
    "sphinx-copybutton>=0.5.2",
    "furo>=2025.12.19",
]

[tool.ruff]
line-length = 88
src = ["src"]  # First, add the source code folder
target-version = "py314"  # We are using Python 3.14

[tool.ruff.lint]
# Activate additional rules to imitate flake8 and isort
select = [
  "E", "F", "I", "UP", "B", "W", "C90"
]
# Exclude files and folders that are not part of the source code
exclude = ["tests/data", ".venv"]

# Activate autofix for common problems
fixable = ["ALL"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["examples", "examples.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_generics = false
warn_return_any = false







